<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_archive"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="50"
        android:title="@string/action_archive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="10"
        android:title="@string/action_edit"
        app:showAsAction="always"/>

</menu>