<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_device"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="1"
        android:title="@string/action_device"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_google_drive"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="10"
        android:title="@string/action_google_drive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_dropbox"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/action_dropbox"
        app:showAsAction="always"/>

</menu>