<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notesCardBody"
    android:orientation="vertical"
    tools:context=".DropboxPickerActivity">

    <RelativeLayout
        android:id="@+id/relative_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/notesPrimaryBackgroundColor"
        android:padding="@dimen/menu_padding">

        <ImageView
            android:id="@+id/back_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/abc_control_padding_material"
            android:contentDescription="@string/back_button"
            android:padding="@dimen/abc_control_padding_material"
            android:src="@drawable/abc_ic_ab_back_material"
            tools:ignore="PrivateResource"/>

        <TextView
            android:id="@+id/path_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/back_navigation"
            android:textColor="@color/notesPrimaryTextColor"
            android:textSize="@dimen/small_menu_label"/>

        <TextView
            android:id="@+id/log_out_drop_box_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/log_out"
            android:textColor="@color/notesPrimaryTextColor"
            android:textSize="@dimen/small_menu_label"/>

        <ImageView
            android:id="@+id/selection_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/card_view_margin"
            android:layout_toStartOf="@id/log_out_drop_box_label"
            android:contentDescription="@string/save_button"
            android:src="@android:drawable/ic_menu_save"/>

        <ImageView
            android:id="@+id/new_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/card_view_margin"
            android:layout_toStartOf="@id/selection_directory"
            android:contentDescription="@string/add_folder"
            android:src="@drawable/ic_add_folder"/>

        <EditText
            android:id="@+id/new_directory_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/card_view_margin"
            android:layout_toStartOf="@id/new_directory"
            android:background="@null"
            android:hint="@string/folder_name"
            android:textColor="@color/notesPrimaryTextColor"
            android:textColorHint="@color/notesPrimaryTextColor"
            android:textSize="@dimen/small_menu_label"
            android:visibility="gone"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_drop_box_directories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_top_bar"
        android:layout_margin="@dimen/card_view_margin"/>

</RelativeLayout>