<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_recycle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/linear_layout_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/menu_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/notesCardBody"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_note_custom_home"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@color/notesImageBackground"
                android:contentDescription="@string/custom_notes_image"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_loading"/>

            <TextView
                android:id="@+id/date_time_note_custom_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_below="@id/image_note_custom_home"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginTop="@dimen/card_view_margin"
                android:alpha=".87"
                android:text="@string/custom_notes_date_time"
                android:textColor="@color/notesSecondaryTextColor"/>

            <TextView
                android:id="@+id/title_note_custom_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_time_note_custom_home"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginLeft="@dimen/card_view_margin"
                android:layout_marginRight="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_toEndOf="@id/image_note_custom_home"
                android:text="@string/custom_notes_title"
                android:textColor="@color/notesSecondaryTextColor"
                android:textSize="@dimen/home_title"/>

            <LinearLayout
                android:id="@+id/home_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_time_note_custom_home"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginLeft="@dimen/card_view_margin"
                android:layout_marginRight="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_toEndOf="@id/image_note_custom_home"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/description_note_custom_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_note_custom_home"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginLeft="@dimen/card_view_margin"
                android:layout_marginRight="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_toEndOf="@id/image_note_custom_home"
                android:alpha=".87"
                android:text="@string/custom_notes_description"
                android:textColor="@color/notesSecondaryTextColor"
                android:textSize="@dimen/home_description"/>

            <TextView
                android:id="@+id/id_note_custom_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>